2006-11-10  J. Tang  <tang@jtang.org>

	* tree.tcl: fixed error with drag & drop's autoscroll [bug
	1408494]
	
	* listbox.tcl: fixed error with drag & drop's autoscroll; fixed
	error when dropping at the end of the list

	* Added dynamic help to text tags (man page updated); fixed resize
	bug with scrollframes.  Thanks to Jos Decoster for these patches.

2006-10-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* utils.tcl (BWidget::bindMouseWheel): do not make special
	mousewheel bindings if global ones exist (like from style::as)

2006-09-28  J. Tang  <tang@jtang.org>

	**** BWIDGET 1.8.0 TAGGED ****
	
	* removed Makefile.in

	* font.tcl: correctly handle code path when user cancels dialog

	* passwd.tcl: fixed Dialog::enddialog error; fixed ordering error

	* pkgIndex.tcl, README.txt: updated to BWidget 1.8

	* removed configure.in and aclocal.m4

	* messagedlg.tcl: explicitly marked the 'Abort' button upon -type
	abortretryignore to be the default button [bug 970199]

	* Tree.html: documented [find] and [line] commands [bug 626819];
	noted bug with %W binding [bug 1224203]

	* tree.tcl: added [bindArea] procedure; updated man page [patch
	839066]

	* combobox.tcl: added [clearvalue] proc to explicitly clear a
	ComboBox value, updated man page [patch 780704]

2006-09-26  J. Tang  <tang@jtang.org>

	* passwd.tcl: don't ignore -labelwidth when calculating label
	widths; return key moves through subwidgets like most login
	managers [patch 922877, with slight change]

	* font.tcl: add options to select font color and to disable font
	sizes; updated man pages [patch 1531199]

	* font.tcl: using arrow keys to browse font family / font size
	will cause an update to the shown sample font [patch 947109]

	* demo/basic.tcl: fixed Entry's enter command callback [bug
	1400838]

2006-08-21  J. Tang  <tang@jtang.org>

	* combobox.tcl: unpost after autoposting when another Tk window
	gets the focus; unpost upon hitting the enter key
